# RepoInsight

./: .env.example  .gitignore  README.md  RepoInsight-MVP-PRD.md  RepoInsight.md  main.py  pyproject.toml  pytest.ini
repoinsight/agents/: __init__.py  analysis_coordinator.py  answer_coordinator.py  architecture_agent.py  code_agent.py  execution.py  langgraph_analysis.py  langgraph_answer.py  models.py
repoinsight/analyze/: __init__.py  code_index_inference.py  code_semantics.py  file_reader.py  insight_builder.py  pipeline.py  project_profile_inference.py  stack_inference.py  tree_sitter_support.py
repoinsight/answer/: __init__.py  formatter.py  service.py
repoinsight/cli/: main.py
repoinsight/ingest/: __init__.py  file_scanner.py  git_loader.py  github_client.py  repo_cache.py  repo_service.py
repoinsight/llm/: __init__.py  config.py  context_builder.py  service.py
repoinsight/models/: analysis_model.py  answer_model.py  cache_model.py  file_model.py  (+3 more)
tests/: repo_test.py  test_analysis_pipeline_stages.py  test_answer_agent_coordinator.py  test_answer_cli.py  test_answer_service.py  test_code_agent.py  test_code_chunk_documents.py  test_code_index_mvp.py  test_embedding_service.py  test_langgraph_analysis.py  test_langgraph_answer.py  test_llm_config.py  test_llm_service.py  test_multi_agent_coordinator.py  test_pdf_report.py  test_project_profile_structure.py  test_rag_evaluation.py  test_remove_vector_command.py  test_repo_list_status.py  test_report_outputs.py  test_search_intent_ranking.py  test_summary_builders.py  test_vector_store_commands.py
(+30 files in other folders)
