[project]
name = "repoinsight"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.24.1",
    "typing_extensions",
    "pydantic",
    "dotenv>=0.9.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 👇 加上这一段，立刻解决安装错误！
[tool.setuptools.packages.find]
where = ["."]
include = ["repoinsight", "repoinsight.*"]
exclude = ["data", "reports", ".venv", "tests"]
