[project]
name = "repoinsight"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.24.1",
    "typing_extensions",
    "pydantic",
    "dotenv>=0.9.9",
    "reportlab>=4.2.0",
    "chromadb>=1.0.8",
    "sentence-transformers>=5.1.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "langgraph>=1.1.6",
]

[project.optional-dependencies]
graph = [
    "langgraph",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["repoinsight", "repoinsight.*"]
exclude = ["data", "reports", ".venv", "tests"]
